force-app/main/default/objects/MasterActivity__c/MasterActivity__c.object-meta.xml
<CustomObject>
    <label>Master Activity</label>
    <nameField>
        <displayFormat>MA-{000000}</displayFormat>
        <label>Seq. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Master Activities</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>