force-app/main/default/objects/MasterActivity__c/fields/ActivityName__c.field-meta.xml
<CustomField>
    <fullName>ActivityName__c</fullName>
    <label>Activity Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>