force-app/main/default/objects/MasterActivity__c/fields/IsAutoInProgress__c.field-meta.xml
<CustomField>
    <fullName>IsAutoInProgress__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Auto InProgress</label>
    <type>Checkbox</type>
</CustomField>