force-app/main/default/objects/MasterActivity__c/fields/IsDisabledAfterCompleted__c.field-meta.xml
<CustomField>
    <fullName>IsDisabledAfterCompleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Disabled After Completed</label>
    <type>Checkbox</type>
</CustomField>