force-app/main/default/objects/MasterActivity__c/fields/IsImportant__c.field-meta.xml
<CustomField>
    <fullName>IsImportant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Important</label>
    <type>Checkbox</type>
</CustomField>