force-app/main/default/objects/MasterActivity__c/fields/isRequiredAnalysisCompt__c.field-meta.xml
<CustomField>
    <fullName>isRequiredAnalysisCompt__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isRequiredAnalysisCompt</label>
    <type>Checkbox</type>
</CustomField>