force-app/main/default/objects/MasterActivity__c/fields/IsRequiredKnoxApproval__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredKnoxApproval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required KnoxApproval</label>
    <type>Checkbox</type>
</CustomField>