force-app/main/default/objects/MasterActivity__c/fields/IsRequiredWork__c.field-meta.xml
<CustomField>
    <fullName>IsRequiredWork__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Required Work</label>
    <type>Checkbox</type>
</CustomField>