force-app/main/default/objects/MasterActivity__c/fields/RequiredTransaction__c.field-meta.xml
<CustomField>
    <fullName>RequiredTransaction__c</fullName>
    <description>선행 Transaction Code</description>
    <inlineHelpText>선행 Transaction Code</inlineHelpText>
    <label>Required Transaction</label>
    <length>100</length>
    <type>Text</type>
</CustomField>