force-app/main/default/objects/MasterActivity__c/fields/RequiredTransactionCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>RequiredTransactionCompanyCode__c</fullName>
    <description>Required Transaction이 적용되는 Company Code</description>
    <inlineHelpText>Required Transaction이 적용되는 Company Code</inlineHelpText>
    <label>Required Transaction Company Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>