force-app/main/default/objects/MasterActivity__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold</fullName>
            </value>
            <value>
                <fullName>Warm</fullName>
            </value>
            <value>
                <fullName>Hot</fullName>
            </value>
            <value>
                <fullName>Z01</fullName>
                <label>Idendified</label>
            </value>
            <value>
                <fullName>Z02</fullName>
                <label>Validated</label>
            </value>
            <value>
                <fullName>Z03</fullName>
                <label>Qualified</label>
            </value>
            <value>
                <fullName>Z04</fullName>
                <label>Solutioned</label>
            </value>
            <value>
                <fullName>Z05</fullName>
                <label>Won</label>
            </value>
            <value>
                <fullName>Z06</fullName>
                <label>Failed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>