force-app/main/default/objects/MasterActivity__c/fields/TransactionName__c.field-meta.xml
<CustomField>
    <fullName>TransactionName__c</fullName>
    <label>Transaction Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>XP11</fullName>
                <label>Register Opportunity</label>
            </value>
            <value>
                <fullName>ZP21</fullName>
                <label>Review Opportunity</label>
            </value>
            <value>
                <fullName>ZP32</fullName>
                <label>Request Resources</label>
            </value>
            <value>
                <fullName>XP31</fullName>
                <label>Receive RFP</label>
            </value>
            <value>
                <fullName>ZP31</fullName>
                <label>Request Strategy Committee</label>
            </value>
            <value>
                <fullName>XP32</fullName>
                <label>Strategy Committee Cost Plan Completion</label>
            </value>
            <value>
                <fullName>ZP62</fullName>
                <label>Request Committee Approval</label>
            </value>
            <value>
                <fullName>ZPZ3</fullName>
                <label>Agency Contract Exception</label>
            </value>
            <value>
                <fullName>ZP61</fullName>
                <label>Submit Proposal</label>
            </value>
            <value>
                <fullName>XP41</fullName>
                <label>Presentation</label>
            </value>
            <value>
                <fullName>XP42</fullName>
                <label>Preferred Bidder</label>
            </value>
            <value>
                <fullName>XP43</fullName>
                <label>Customer Approval</label>
            </value>
            <value>
                <fullName>XP44</fullName>
                <label>Negotiation</label>
            </value>
            <value>
                <fullName>XP51</fullName>
                <label>Contract P&amp;L</label>
            </value>
            <value>
                <fullName>XP52</fullName>
                <label>Legal Review</label>
            </value>
            <value>
                <fullName>ZP82</fullName>
                <label>Contract Approval</label>
            </value>
            <value>
                <fullName>XP57</fullName>
                <label>Closing</label>
            </value>
            <value>
                <fullName>ZPZ2</fullName>
                <label>Drop Opportunity</label>
            </value>
            <value>
                <fullName>XPX1</fullName>
                <label>Abort Opportunity</label>
            </value>
            <value>
                <fullName>ZAC1</fullName>
                <label>Hold Opportunity</label>
            </value>
            <value>
                <fullName>ZPZ1</fullName>
                <label>Lost Opportunity</label>
            </value>
            <value>
                <fullName>ZAC4</fullName>
                <label>Unhold Opportunity</label>
            </value>
            <value>
                <fullName>ZPG1</fullName>
                <label>Change Approval Request</label>
            </value>
            <value>
                <fullName>2.2.1.</fullName>
                <label>Credit Assessment</label>
            </value>
            <value>
                <fullName>2.2.2.</fullName>
                <label>Request AP(APS)</label>
            </value>
            <value>
                <fullName>2.3.2.</fullName>
                <label>Bidding LBS</label>
            </value>
            <value>
                <fullName>2.3.3.</fullName>
                <label>Test Shipment</label>
            </value>
            <value>
                <fullName>2.4.5.</fullName>
                <label>Final LBS</label>
            </value>
            <value>
                <fullName>2.5.1.</fullName>
                <label>Receive Contract</label>
            </value>
            <value>
                <fullName>2.5.3.</fullName>
                <label>Rate Change LBS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>