force-app/main/default/objects/MasterActivity__c/fields/WorkName__c.field-meta.xml
<CustomField>
    <fullName>WorkName__c</fullName>
    <label>Work Name</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Knox Approval</fullName>
            </value>
            <value>
                <fullName>Knox Approval History</fullName>
            </value>
            <value>
                <fullName>RFP List</fullName>
                <label>RFPs</label>
            </value>
            <value>
                <fullName>Service / Solution</fullName>
            </value>
            <value>
                <fullName>VRB Request</fullName>
            </value>
            <value>
                <fullName>Strategy Committee</fullName>
            </value>
            <value>
                <fullName>Agency Contract Exception</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>